Completed interpretation of Brainfuck based programs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 SET(SOURCES
 	${PROJECT_SOURCE_DIR}/main.cpp
 	${PROJECT_SOURCE_DIR}/Interpreter.cpp
+	${PROJECT_SOURCE_DIR}/Char.cpp
 )
 SET(HEADERS
 	${PROJECT_INCLUDE_DIR}/Tape.hpp
 	${PROJECT_INCLUDE_DIR}/Program.hpp
 	${PROJECT_INCLUDE_DIR}/Interpreter.hpp
+	${PROJECT_INCLUDE_DIR}/Char.hpp
 )
 
 ADD_EXECUTABLE(MutableCode ${SOURCES} ${HEADERS})
