Added ProgramLoader functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 SET(SOURCES
 	${PROJECT_SOURCE_DIR}/main.cpp
+	${PROJECT_SOURCE_DIR}/Program.cpp
 	${PROJECT_SOURCE_DIR}/Interpreter.cpp
 	${PROJECT_SOURCE_DIR}/Char.cpp
 )
@@ -19,6 +20,7 @@ SET(HEADERS
 	${PROJECT_INCLUDE_DIR}/Program.hpp
 	${PROJECT_INCLUDE_DIR}/Interpreter.hpp
 	${PROJECT_INCLUDE_DIR}/Char.hpp
+	${PROJECT_INCLUDE_DIR}/ProgramLoader.hpp
 )
 
 ADD_EXECUTABLE(MutableCode ${SOURCES} ${HEADERS})
