--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(HEADERS
 	${PROJECT_INCLUDE_DIR}/ProgramLoader.hpp
 	${PROJECT_INCLUDE_DIR}/Mutator.hpp
 	${PROJECT_INCLUDE_DIR}/Random.hpp
+	${PROJECT_INCLUDE_DIR}/Evaluator.hpp
 )
 
 ADD_EXECUTABLE(MutableCode ${SOURCES} ${HEADERS})
