Added EntropyEvaluator using zlib compression.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,14 @@ include_directories("${PROJECT_SOURCE_DIR}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -fopenmp -Wall -O2")
 
-SET(SOURCES
+set(SOURCES
 	${PROJECT_SOURCE_DIR}/main.cpp
 	${PROJECT_SOURCE_DIR}/Program.cpp
 	${PROJECT_SOURCE_DIR}/Interpreter.cpp
 	${PROJECT_SOURCE_DIR}/Char.cpp
 	${PROJECT_SOURCE_DIR}/Mutator.cpp
 )
-SET(HEADERS
+set(HEADERS
 	${PROJECT_INCLUDE_DIR}/Tape.hpp
 	${PROJECT_INCLUDE_DIR}/Program.hpp
 	${PROJECT_INCLUDE_DIR}/Interpreter.hpp
@@ -26,6 +26,9 @@ SET(HEADERS
 	${PROJECT_INCLUDE_DIR}/Random.hpp
 	${PROJECT_INCLUDE_DIR}/Evaluator.hpp
 	${PROJECT_INCLUDE_DIR}/Compression.hpp
+	${PROJECT_INCLUDE_DIR}/EntropyEvaluator.hpp
 )
 
-ADD_EXECUTABLE(MutableCode ${SOURCES} ${HEADERS})
+add_executable(MutableCode ${SOURCES} ${HEADERS})
+
+target_link_libraries(MutableCode z)
