Imported Levenshtein distance calculation code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(HEADERS
 	${PROJECT_INCLUDE_DIR}/Evaluator.hpp
 	${PROJECT_INCLUDE_DIR}/Compression.hpp
 	${PROJECT_INCLUDE_DIR}/EntropyEvaluator.hpp
+	${PROJECT_INCLUDE_DIR}/LevenshteinDistance.hpp
 )
 
 add_executable(MutableCode ${SOURCES} ${HEADERS})
